<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@drawable/bg_item_arc"
    >


    <!--上部教师信息-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/itemshape"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        >

        <!--<TextView-->
            <!--android:id="@+id/item_over_js"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/item_js"-->
            <!--android:textSize="20sp"-->
            <!--android:textColor="@color/graytext"/>-->


        <ImageView
            android:id="@+id/item_over_js"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_teacher"
            android:paddingLeft="10dp"/>

        <TextView
            android:id="@+id/item_over_jsxm"

            android:layout_toRightOf="@+id/item_over_js"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text=""
            android:textSize="20sp"
            android:paddingLeft="5dp"
            />
    </RelativeLayout>

    <!--中部内容-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--学生-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            >
            <TextView
                android:id="@+id/item_over_xs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_xs"
                android:textSize="15sp"

                />
            <TextView
                android:id="@+id/item_over_xsxm"
                android:layout_toRightOf="@+id/item_over_xs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text=""
                android:layout_alignBaseline="@+id/item_over_xs"

                />

            <TextView
                android:id="@+id/item_over_kc"
                android:layout_below="@+id/item_over_xs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_kc"
                android:textSize="15sp"

                />
            <TextView
                android:id="@+id/item_over_kcxm"
                android:layout_toRightOf="@+id/item_over_kc"
                android:layout_below="@+id/item_over_xsxm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text=""
                android:layout_alignBaseline="@+id/item_over_kc"

                />

        <!--开始时间-->

            <TextView
                android:id="@+id/item_over_kssj"
                android:layout_below="@+id/item_over_kc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_kssj"
                android:textSize="15sp"

                />
            <TextView
                android:id="@+id/item_over_kssjd"
                android:layout_below="@+id/item_over_kcxm"
                android:layout_toRightOf="@+id/item_over_kssj"
                android:layout_alignBaseline="@+id/item_over_kssj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text=""
                />

        <!--结束时间-->
            <TextView
                android:id="@+id/item_over_jssj"
                android:layout_below="@+id/item_over_kssj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_jssj"
                android:textSize="15sp"


                />
            <TextView
                android:id="@+id/item_over_jssjd"
                android:layout_below="@+id/item_over_kssjd"
                android:layout_toRightOf="@+id/item_over_jssj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text=""
                android:layout_alignBaseline="@+id/item_over_jssj"
                />

            <!--完成时间-->
            <TextView
                android:id="@+id/item_over_wcsj"
                android:layout_below="@+id/item_over_jssj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_wcsj"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"

                />
            <TextView
                android:id="@+id/item_over_wcsjd"
                android:layout_below="@+id/item_over_jssjd"
                android:layout_toRightOf="@+id/item_over_wcsj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text=""
                android:layout_alignBaseline="@+id/item_over_wcsj"
                />

            <ImageView
                android:id="@+id/have_class"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:src="@mipmap/ic_classover"

                android:drawablePadding="-10dp"
                android:layout_marginRight="10dp"
                android:layout_alignBottom="@+id/item_over_wcsjd"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="22dp"
                android:layout_alignTop="@+id/item_over_kcxm" />


        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>
